feat(api): add swagger
