# internal/transport/delivery/http/handlers.go
@@ -20,6 +20,18 @@ func NewAccountHandlers(cfg *config.Config, transportUC transport.UseCase) trans
 	return &transportHandlers{cfg: cfg, transportUC: transportUC}
 }
 
+// Create
+// @Summary
+// @Schemes
+// @Description	Create new transport
+// @Tags		Transport
+// @Accept		json
+// @Produce		json
+// @Security 	Authorization
+// @Param   	request body models.Transport true "query params"
+// @Success		200	{object} models.Transport
+// @Failure		500
+// @Router		/Transport [post]
 func (h *transportHandlers) Post() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		transport := &models.Transport{}
@@ -45,6 +57,17 @@ func (h *transportHandlers) Post() gin.HandlerFunc {
 	}
 }
 
+// GET
+// @Summary
+// @Schemes
+// @Description	get transport info by id
+// @Tags		Transport
+// @Accept		json
+// @Produce		json
+// @Param  		transport_id path string true "Trasnport ID"
+// @Success		200	{object} models.Transport
+// @Failure		500
+// @Router		/Transport/{transport_id} [get]
 func (h transportHandlers) Get() gin.HandlerFunc {
 	return func(c *gin.Context) {
 
@@ -66,6 +89,19 @@ func (h transportHandlers) Get() gin.HandlerFunc {
 	}
 }
 
+// Update
+// @Summary
+// @Schemes
+// @Description	update transport
+// @Tags		Transport
+// @Accept		json
+// @Produce		json
+// @Security 	Authorization
+// @Param  		transport_id path string true "Trasnport ID"
+// @Param   	request body models.Transport true "query params"
+// @Success		200	{object} models.Transport
+// @Failure		500
+// @Router		/Transport/{transport_id} [put]
 func (h *transportHandlers) Put() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		ctx := utils.GetRequestCtx(c)
@@ -94,6 +130,18 @@ func (h *transportHandlers) Put() gin.HandlerFunc {
 	}
 }
 
+// Delete
+// @Summary
+// @Schemes
+// @Description	delete transport
+// @Tags		Transport
+// @Accept		json
+// @Produce		json
+// @Security 	Authorization
+// @Param  		transport_id path string true "Trasnport ID"
+// @Success		200
+// @Failure		500
+// @Router		/Transport/{transport_id} [delete]
 func (h *transportHandlers) Delete() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		ctx := utils.GetRequestCtx(c)
